--- a/style.css
+++ b/style.css
@@ -16,7 +16,6 @@ h1,h2,h3,h4,h5,h6{
     color: #1B1D21;
 }
 
-
 a{
     color: #ffffff;
     text-decoration: none;
@@ -26,17 +25,39 @@ ul{
     list-style: none;
 }
 
+.container{
+    max-width: 1080px;
+    margin: 100px auto;
+    padding: 0 2%;
+}
+
+footer .container{margin-bottom: 0;}
+header .container{margin-top: 0;}
+
+.content h3 span{
+    display: block;
+}
+
 /* Header */
 
 header{
     background-color: #636C79;
 }
 
+.btn-mobileMenu i{
+    display: none;
+    color: #ffffff;
+    font-size: 25px;
+    border: 1px solid #8BB7A2;
+    padding: 3px 5px;
+    border-radius: 5px;
+}
+
 nav{
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    padding: 30px 60px 0 60px;
+    padding: 30px 0;
 }
 
 .nav-right{
@@ -57,6 +78,12 @@ nav{
 
 .navigation li a{
     font-size: 13px;
+    transition: all 0.3s ease;
+}
+
+.navigation li a:hover{
+    color:#8BB7A2;
+    border-bottom: 2px solid #ffffff;
 }
 
 .nav-right button{
@@ -66,30 +93,39 @@ nav{
     padding: 6px 25px;
     font-size: 13px;
     margin-left: 30px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.nav-right button:hover{
+    background-color: #8BB7A2;
+    color: #ffffff;
+    border: 1px solid #8BB7A2;
 }
 
 /* Hero */
+
 .hero{
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
-    column-gap: 350px;
-    height: 80vh;
+    min-height: 80vh;
 }
 
 .hero-img{
-    width: 350px;
-    height: 450px;
+    max-width: 50%;
+    height: auto;
 }
 
 .hero-img img{
-    width: 100%;
-    height: 100%;
+    max-width: 70%;
+    min-height: 400px;
     object-fit: cover;
+    margin-left: 10%;
 }
 
 .hero-content{
-    max-width: 35%;
+    max-width: 50%;
 }
 
 .hero-content h1{
@@ -148,8 +184,7 @@ nav{
 
 .connect{
     text-align: center;
-    width: 1280px;
-    margin: 100px auto;
+    /* margin: 100px 0; */
 }
 
 .title{
@@ -173,14 +208,16 @@ nav{
     font-weight: 500;
 }
 
-.connect-image img{
+.connect-image{
+    background-image: url('./images/connect-img.jpg');
+    background-size: cover;
+    background-position: center center;
     width: 100%;
-    height: 600px;
-    object-fit: cover;
-    object-position: top;
+    height: 550px
 }
 
 /* WebDev Section */
+
 .webdev{
     position: relative;
 }
@@ -191,15 +228,14 @@ nav{
 
 .webdev-inner-wrapper{
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    width: 1280px;
-    margin: 150px auto;
-    column-gap: 25%;
+    margin-top: 100px;
+    column-gap: 3%;
 }
 
 .webdev-inner-wrapper .content{
-    width: 40%;
+    max-width: 50%;
 }
 
 .content h3{
@@ -222,13 +258,12 @@ nav{
 }
 
 .webdev-img-wrapper{
-    width: 35%;
+    width: 50%;
 }
 
 img.section-img{
-    transform: scale(1.4);
-    width: 350px;
-    height: 350px;
+    max-width: 100%;
+    height: 500px;
     object-fit: cover;
     object-position: right;
 }
@@ -237,11 +272,9 @@ img.section-img{
 
 .dgm-inner-wrapper{
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
-    width: 1280px;
-    margin: 300px auto;
-    column-gap: 25%;
+    column-gap: 3%;
 }
 
 .dgm-inner-wrapper img.section-img{
@@ -249,31 +282,34 @@ img.section-img{
 }
 
 .dgm-inner-wrapper .connect{
-    width: 40%;
+    width: 60%;
 }
 
 .dgm-img-wrapper{
-    width: 35%;
+    width: 40%;
+}
+
+.dgm-img-wrapper img{
+    width: 100%;
+    height: 500px;
 }
 
 /* First Impression */
 
 .fim-inner-wrapper{
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
-    width: 1280px;
-    margin: 300px auto 250px;
-    column-gap: 25%;
+    column-gap: 3%;
 }
 
 
 .fim-inner-wrapper .connect{
-    width: 40%;
+    width: 50%;
 }
 
 .fim-img-wrapper{
-    width: 35%;
+    width: 50%;
 }
 
 .fim-inner-wrapper img.section-img{
@@ -281,16 +317,11 @@ img.section-img{
 }
 
 /* Our Team */
-.our-team{
-    width: 1180px;
-    margin: auto;
-}
 
 .team-header{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    column-gap: 10%;
 }
 
 .team-header h2{
@@ -311,11 +342,11 @@ img.section-img{
 }
 
 .team-card{
-    width: 350px;
+    max-width: 320px;
 }
 
 .member-img{
-    width: 360px;
+    max-width: 100%;
 }
 
 .team-card .name{
@@ -335,8 +366,6 @@ footer{
 }
 
 .footer-container{
-    width: 1280px;
-    margin: auto;
     padding: 50px 0;
 }
 
@@ -367,7 +396,7 @@ footer{
 
 .divider{
     background-color: #282828;
-    width: 100%;
+    max-width: 100%;
     height: 1px;
     margin: 35px 0;
 }
@@ -376,6 +405,7 @@ footer{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .footer-bottom div h3{
@@ -388,4 +418,108 @@ footer{
     color: #939799;
     margin-bottom: 15px;
     font-size: 15px;
+}
+
+/* Media Queries */
+
+@media screen and (max-width: 1000px) {
+    .container{
+        max-width: 1000px;
+    }
+
+    .team-card{
+        max-width: 290px;
+    }
+
+    .content h3{
+        font-size: 35px;
+    }
+
+    .hero-content h1{
+        font-size: 40px;
+    }
+
+    .hero-content-bottom {
+        padding-right: 100px;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .navigation li {
+        margin-right: 30px;
+    }
+
+    .logo img{
+        margin-top: 0;
+    }
+
+    .hero-content-bottom {
+        padding-right: 50px;
+    }
+
+    .content h3{
+        font-size: 30px;
+    }
+
+    .content p{
+        font-size: 14px;
+    }
+
+    img.section-img,.dgm-img-wrapper img {
+        height: auto;
+    }
+
+    .team-card{
+        max-width: 245px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .nav-right{
+        display: none;
+    }
+
+    .btn-mobileMenu i{
+        display: block;
+    }
+
+    .hero{
+        flex-direction: column-reverse;
+        justify-content: center;
+        gap: 20px;
+    }
+    
+    .hero-img{
+        max-width: 100%;
+    }
+    
+    .hero-img img {
+        max-width: 100%;
+        max-height: 400px;
+        margin-left: 0;
+    }
+    
+    .hero-content{max-width: 70%;}
+
+    .webdev-inner-wrapper{
+        flex-direction: column;
+        gap: 20px;
+    }
+    
+    .dgm-inner-wrapper{
+        flex-direction: column-reverse;
+        gap: 20px;
+    }
+
+    .fim-inner-wrapper {
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .team-info,
+    .team-header{
+        flex-direction: column;
+        gap: 20px;
+    }
+
 }
